--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div style="height: 600px;"
-     leaflet 
-     [leafletOptions]="options"
-     [leafletLayersControl]="layersControl">
-</div>
+<div class="app-container" [ngClass]="{ 'bg-light': user }">
+     <alert></alert>
+     <router-outlet></router-outlet>
+ </div>
