--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,28 +1,26 @@
-<div class="card">
-    <h4 class="card-header">Login</h4>
-    <div class="card-body">
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                    <div *ngIf="f.username.errors.required">Username is required</div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
-                </div>
-            </div>
-            <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
-                </button>
-                <a routerLink="../register" class="btn btn-link">Register</a>
-            </div>
+<div class="main-div">
+  <mat-card>
+     <mat-card-header>
+        <mat-card-title>Login</mat-card-title>
+     </mat-card-header>
+     <mat-card-content>
+        <form>
+           <div>
+              <mat-form-field style=" width: 100%">
+                 <div >
+                    <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+                 </div>
+              </mat-form-field>
+           </div>
+           <mat-form-field style=" width: 100%">
+              <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
+           </mat-form-field>
         </form>
-    </div>
+     </mat-card-content>
+     <mat-card-actions>
+        <button style="width: 100%;" mat-raised-button (click)="login()" color="primary">Login</button>
+     </mat-card-actions>
+  </mat-card>
 </div>
+
+
