--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="app-container" [ngClass]="{ 'bg-light': user }">
-     <alert></alert>
+     <app-header></app-header>
      <router-outlet></router-outlet>
  </div>
