--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,5 +2,6 @@
     <div class="container">
         <h1>Hi {{user.firstName}}!</h1>
         <p>You're logged in with Angular 10!!</p>
+        <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
     </div>
 </div>
