--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -5,13 +5,9 @@
      </mat-card-header>
      <mat-card-content>
         <form>
-           <div>
               <mat-form-field style=" width: 100%">
-                 <div >
                     <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-                 </div>
               </mat-form-field>
-           </div>
            <mat-form-field style=" width: 100%">
               <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
            </mat-form-field>
@@ -20,6 +16,11 @@
      <mat-card-actions>
         <button style="width: 100%;" mat-raised-button (click)="login()" color="primary">Login</button>
      </mat-card-actions>
+
+     <div class="login-sub-footer">
+         <div class="no-account-text">You don't have an account?</div>
+         <div class="sign-up-text"><span (click) = "registerView()">Sign in</span></div>
+     </div>
   </mat-card>
 </div>
 
