--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -1,43 +1,41 @@
-﻿<div class="card">
-    <h4 class="card-header">Register</h4>
-    <div class="card-body">
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="firstName">First Name</label>
-                <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
-                <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-                    <div *ngIf="f.firstName.errors.required">First Name is required</div>
-                </div>
+﻿<div class="main-div">
+    <mat-card>
+       <mat-card-header>
+          <mat-card-title>Register</mat-card-title>
+       </mat-card-header>
+       <mat-card-content>
+          <form [formGroup]="form">
+            <mat-form-field style=" width: 100%">
+               <input matInput placeholder="Username" formControlName="username" name="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+            </mat-form-field>
+            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+               <div *ngIf="f.username.errors.required" style="color: red;">User name is required</div>
             </div>
-            <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
-                <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-                    <div *ngIf="f.lastName.errors.required">Last Name is required</div>
-                </div>
+            <mat-form-field style=" width: 100%">
+                <input matInput placeholder="Password" formControlName="password" type="password" name="password">
+            </mat-form-field>
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+               <div *ngIf="f.password.errors.required" style="color: red;">Password is required</div>
+               <div *ngIf="f.password.errors.minlength" style="color: red;">Password must be at least 6 characters</div>
             </div>
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                    <div *ngIf="f.username.errors.required">Username is required</div>
-                </div>
+            <mat-form-field style=" width: 100%">
+                <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" name="confirmPassword">
+            </mat-form-field>
+            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+               <div *ngIf="f.confirmPassword.errors.invalidPasswords" style="color: red;">Passwords must be equal</div>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
-                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-                </div>
-            </div>
-            <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Register
-                </button>
-                <a routerLink="../login" class="btn btn-link">Cancel</a>
-            </div>
-        </form>
-    </div>
-</div>
+          </form>
+       </mat-card-content>
+       <mat-card-actions>
+          <button style="width: 100%;" mat-raised-button (click)="register()" color="primary">Register</button>
+       </mat-card-actions>
+  
+       <div class="login-sub-footer" style="margin-top: 62% !important;">
+           <div class="no-account-text">You have an account?</div>
+           <div class="sign-up-text"><span (click) = "loginView()">Log in</span></div>
+       </div>
+    </mat-card>
+  </div>
+  
+  
+  
