--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -6,20 +6,20 @@
        <mat-card-content>
           <form [formGroup]="form">
             <mat-form-field style=" width: 100%">
-               <input matInput placeholder="Username" formControlName="username" name="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+               <input matInput placeholder="Username" formControlName="username" name="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" required>
             </mat-form-field>
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                <div *ngIf="f.username.errors.required" style="color: red;">User name is required</div>
             </div>
             <mat-form-field style=" width: 100%">
-                <input matInput placeholder="Password" formControlName="password" type="password" name="password">
+                <input matInput placeholder="Password" formControlName="password" type="password" name="password" required>
             </mat-form-field>
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                <div *ngIf="f.password.errors.required" style="color: red;">Password is required</div>
                <div *ngIf="f.password.errors.minlength" style="color: red;">Password must be at least 6 characters</div>
             </div>
             <mat-form-field style=" width: 100%">
-                <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" name="confirmPassword">
+                <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" name="confirmPassword" required>
             </mat-form-field>
             <div *ngIf="submitted && v.errors" class="invalid-feedback">
                <div *ngIf="submitted" style="color: red;">Passwords must be equal</div>
