Implemented pointer loading and adding

--- a/src/app/maps/my-pointers/my-pointers.component.html
+++ b/src/app/maps/my-pointers/my-pointers.component.html
@@ -29,7 +29,7 @@
 
         <div class="pointers-content">
             <div class="pointers-table-row" *ngFor="let pointer of visiblePointers" (click)="showOnMap(pointer)">
-                <div class="wide"><span>{{pointer.createdOn | date: "HH:mm dd-MM-yyyy"}}</span></div>
+                <div class="wide"><span>{{pointer.created_on | date: "HH:mm dd-MM-yyyy"}}</span></div>
                 <div class="medium"><span>{{pointer.description}}</span></div>
                 <div class="medium right-position"><span>{{pointer.likes}}</span></div>
             </div>
