login/logout/register connection to the base

--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -16,6 +16,9 @@
      <mat-card-actions>
         <button style="width: 100%;" mat-raised-button (click)="login()" color="primary">Login</button>
      </mat-card-actions>
+    <mat-card-actions>
+      <button style="width: 100%;" mat-raised-button (click)="navigateToMap()" color="primary">Powrót</button>
+    </mat-card-actions>
 
      <div class="login-sub-footer">
          <div class="no-account-text">You don't have an account?</div>
