--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -6,20 +6,20 @@
        <mat-card-content>
           <form [formGroup]="form">
             <mat-form-field style=" width: 100%">
-               <input matInput placeholder="Username" formControlName="username" name="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" required>
+               <input #username matInput placeholder="Username" formControlName="username" name="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" required>
             </mat-form-field>
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                <div *ngIf="f.username.errors.required" style="color: red;">User name is required</div>
             </div>
             <mat-form-field style=" width: 100%">
-                <input matInput placeholder="Password" formControlName="password" type="password" name="password" required>
+                <input #password matInput placeholder="Password" formControlName="password" type="password" name="password" required>
             </mat-form-field>
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                <div *ngIf="f.password.errors.required" style="color: red;">Password is required</div>
                <div *ngIf="f.password.errors.minlength" style="color: red;">Password must be at least 6 characters</div>
             </div>
             <mat-form-field style=" width: 100%">
-                <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" name="confirmPassword" required>
+                <input #confirmpassword matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" name="confirmPassword" required>
             </mat-form-field>
             <div *ngIf="submitted && v.errors" class="invalid-feedback">
                <div *ngIf="submitted" style="color: red;">Passwords must be equal</div>
@@ -27,15 +27,15 @@
           </form>
        </mat-card-content>
        <mat-card-actions>
-          <button style="width: 100%;" mat-raised-button (click)="register()" color="primary">Register</button>
+          <button style="width: 100%;" mat-raised-button (click)="register(username.value, password.value
+          , confirmpassword.value)" color="primary">Register</button>
        </mat-card-actions>
-  
+
        <div class="login-sub-footer" style="margin-top: 62% !important;">
            <div class="no-account-text">You have an account?</div>
            <div class="sign-up-text"><span (click) = "loginView()">Log in</span></div>
        </div>
     </mat-card>
   </div>
-  
-  
-  
+
+
