--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,10 +17,12 @@
         <mat-icon>list_alt</mat-icon>
         <span>Moje znaczniki</span>
       </button>
-      <button mat-menu-item>
+      <button (click)="logout()" mat-menu-item>
         <mat-icon>power_settings_new</mat-icon>
         <span>Wyloguj</span>
       </button>
+
+
     </mat-menu>
 </mat-toolbar-row>
 
