--- a/src/app/maps/my-pointers/my-pointers.component.html
+++ b/src/app/maps/my-pointers/my-pointers.component.html
@@ -17,11 +17,11 @@
                     [placeholder]="'Szukaj'" />
             </div>
 
-            <div class="medium"> <input [formControl]="nameSearchControl" id="nameSearchControl" class="searchable"
+            <div class="medium"> <input  [formControl]="nameSearchControl" id="nameSearchControl" class="searchable"
                     [placeholder]="'Szukaj'" />
             </div>
 
-            <div class="medium"> <input [formControl]="dateSearchControl" id="dateSearchControl" class="searchable"
+            <div class="medium"> <input [formControl]="likesSearchControl" id="likesSearchControl" class="searchable"
                     [placeholder]="'Szukaj'" />
             </div>
 
