--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -6,23 +6,20 @@
      <mat-card-content>
         <form>
               <mat-form-field style=" width: 100%">
-                    <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+                    <input matInput placeholder="Nazwa użytkownika" [(ngModel)]="username" name="username" required>
               </mat-form-field>
            <mat-form-field style=" width: 100%">
-              <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
+              <input matInput placeholder="Hasło" [(ngModel)]="password" type="password" name="password" required>
            </mat-form-field>
         </form>
      </mat-card-content>
      <mat-card-actions>
-        <button style="width: 100%;" mat-raised-button (click)="login()" color="primary">Login</button>
+        <button style="width: 100%;" mat-raised-button (click)="login()" color="primary">Zaloguj</button>
      </mat-card-actions>
-    <mat-card-actions>
-      <button style="width: 100%;" mat-raised-button (click)="navigateToMap()" color="primary">Powrót</button>
-    </mat-card-actions>
 
      <div class="login-sub-footer">
-         <div class="no-account-text">You don't have an account?</div>
-         <div class="sign-up-text"><span (click) = "registerView()">Sign in</span></div>
+         <div class="no-account-text">Nie posiadasz konta?</div>
+         <div class="sign-up-text"><span (click) = "registerView()">Stwórz konto</span></div>
      </div>
   </mat-card>
 </div>
