--- a/src/app/dialogs/add-pointer-dialog.component.html
+++ b/src/app/dialogs/add-pointer-dialog.component.html
@@ -1,11 +1,11 @@
 <div mat-dialog-content>
-    <p>Provide a marker description</p>
+    <p>Wprowadź opis znacznika</p>
     <mat-form-field>
-      <mat-label>Description</mat-label>
+      <mat-label>Opis</mat-label>
       <input matInput [(ngModel)]="data.description">
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">No Thanks</button>
-    <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Ok</button>
+    <button mat-button (click)="onNoClick()">Anuluj</button>
+    <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Dodaj</button>
 </div>
